# shape-movement

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lint.sh  vcpkg-configuration.json
.github/workflows/: github-actions.yml
lib/: CMakeLists.txt
lib/logger/: CMakeLists.txt  core.hh
lib/math/: CMakeLists.txt  Matrix.cc  Matrix.hh  Matrix3x3.cc  Matrix3x3.hh  Matrix4x4.cc  Matrix4x4.hh  Vector.cc  Vector.hh
lib/shader/: CMakeLists.txt  Shader.hh  ShaderProgram.cc  ShaderProgram.hh
lib/utils/: CMakeLists.txt  defer.hh  fs.cc  fs.hh  functional.hh
src/: CMakeLists.txt  main.cc  version.hh.in
src/2d/: CMakeLists.txt  Shader.hh  ShaderProgram.cc  ShaderProgram.hh  main.cc  resources.hh.in
src/2d/shaders/: fragment.frag  vertex.vert
src/3d/: CMakeLists.txt  main.cc
src/3d/shaders/: fragment.frag  vertex.vert
tests/utils/: CMakeLists.txt  defer.cc  sequence.cc
